--- a/public/tester.html
+++ b/public/tester.html
@@ -473,22 +473,26 @@ function spin() {
   const stopAngle = index * sliceAngle + sliceAngle / 2 + offset;
   const finalRotation = baseRotation + stopAngle;
 
-  // Muter animasi
-  wheel.style.transition = 'transform 6s cubic-bezier(0.33, 1, 0.68, 1)';
+  const SPIN_DURATION = 6200; // sama kayak timeout result
+
+// Start muter animasi
+wheel.style.transition = `transform ${SPIN_DURATION}ms cubic-bezier(0.33, 1, 0.68, 1)`;
 wheel.style.transform = `rotate(${finalRotation}deg)`;
 
-// 🔊 Tick sound selama spin
+// 🔊 Start tick
 const tickInterval = setInterval(() => {
   tickSound.currentTime = 0;
-  tickSound.play().catch((err) => {
-    console.warn("Tick sound blocked:", err);
-  });
+  tickSound.play().catch(() => {});
 }, 120);
 
-// Stop tick sound setelah 6 detik
+// ❌ Stop tick pas spin selesai
 setTimeout(() => {
   clearInterval(tickInterval);
-}, 6000);
+
+  // Lanjut logic hasil
+  hadiahTerpilih = hadiahList[index]?.text || "Zonk";
+  ...
+}, SPIN_DURATION);
 
   setTimeout(() => {
     hadiahTerpilih = hadiahList[index]?.text || "Zonk";
