--- a/public/tester.html
+++ b/public/tester.html
@@ -479,10 +479,40 @@ wheel.style.transition = `transform ${SPIN_DURATION}ms cubic-bezier(0.33, 1, 0.6
 wheel.style.transform = `rotate(${finalRotation}deg)`;
 
 // 🔊 Start tick
-const tickInterval = setInterval(() => {
-  tickSound.currentTime = 0;
-  tickSound.play().catch(() => {});
-}, 120);
+let startTime = null;
+let lastTick = 0;
+const duration = SPIN_DURATION; // 6200ms
+const initialInterval = 50; // awalnya cepet banget
+let tickLoop;
+
+function tickAnimation(timestamp) {
+  if (!startTime) startTime = timestamp;
+  const elapsed = timestamp - startTime;
+
+  // Hitung progress (0 - 1)
+  const progress = elapsed / duration;
+  // Hitung interval tick berdasarkan progress (semakin lama makin lambat)
+  const interval = initialInterval + progress * 300; // dari 50ms ke 350ms
+
+  if (elapsed - lastTick >= interval) {
+    tickSound.currentTime = 0;
+    tickSound.play().catch(() => {});
+    lastTick = elapsed;
+  }
+
+  if (elapsed < duration) {
+    tickLoop = requestAnimationFrame(tickAnimation);
+  }
+}
+
+// Start tick
+tickLoop = requestAnimationFrame(tickAnimation);
+
+// Stop tick pas udah selesai spin
+setTimeout(() => {
+  cancelAnimationFrame(tickLoop);
+}, duration);
+
 
 // ❌ Stop tick pas spin selesai
 setTimeout(() => {
@@ -490,18 +520,13 @@ setTimeout(() => {
 
   hadiahTerpilih = hadiahList[index]?.text || "Zonk";
 
-  // ✅ Baru tampilkan spin-log
-  document.getElementById("spin-log").style.display = "block";
-
   alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
   pushLiveFeed(userId, hadiahTerpilih);
-  
+
 }, SPIN_DURATION);
 
   setTimeout(() => {
     hadiahTerpilih = hadiahList[index]?.text || "Zonk";
-
-    alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
     pushLiveFeed(userId, hadiahTerpilih);
 
     fetch("/api/log-spin", {
