update tester.html untuk visual preview spin wheel

--- a/public/tester.html
+++ b/public/tester.html
@@ -439,7 +439,7 @@
     let isSpinning = false;
 let hadiahTerpilih = '';
 const wheel = document.getElementById('wheel');
-const tickSound = new Audio('https://projectwarna.com/kuningtoto/tick.mp3');
+const tickSound = new Audio('https://projectwarna.com/kuningtoto/ticktick.mp3');
   tickSound.volume = 1;
   tickSound.preload = 'auto';
   tickSound.playbackRate = 1.2; // optional: lebih cepat
