--- a/public/tester.html
+++ b/public/tester.html
@@ -483,23 +483,19 @@ tickSound.play().catch(() => {}); // 🔥 cukup 1x aja
 
 // Stop tick pas udah selesai spin
 setTimeout(() => {
-
+  // Hitung sudut akhir muter
   hadiahTerpilih = hadiahList[index]?.text || "Zonk";
 
-  // Munculin pop-up hadiah
   alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
-
-  // Update live feed
   pushLiveFeed(userId, hadiahTerpilih);
 
-  // Simpan log ke backend
+  // Logging & tombol next
   fetch("/api/log-spin", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
   });
 
-  // Update tombol
   spinBtn.textContent = hadiahTerpilih.toLowerCase().includes("zonk")
     ? "Coba Lagi 🔁"
     : "🎁 Klaim Hadiah";
@@ -515,60 +511,6 @@ setTimeout(() => {
 
   isSpinning = false;
 }, SPIN_DURATION);
-
-  setTimeout(() => {
-    hadiahTerpilih = hadiahList[index]?.text || "Zonk";
-    pushLiveFeed(userId, hadiahTerpilih);
-
-    fetch("/api/log-spin", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
-    });
-
-    spinBtn.textContent = hadiahTerpilih.toLowerCase().includes("zonk")
-      ? "Coba Lagi 🔁"
-      : "🎁 Klaim Hadiah";
-    spinBtn.disabled = false;
-    spinBtn.style.opacity = 1;
-    spinBtn.onclick = () => {
-      if (hadiahTerpilih.toLowerCase().includes("zonk")) {
-        location.reload();
-      } else {
-        window.location.href = "https://direct.lc.chat/14680344/";
-      }
-    };
-
-    isSpinning = false;
-  }, 6200);
-}
-
-function initWheel() {
-  const canvasEl = document.getElementById("canvas");
-  const pointerEl = document.querySelector(".pointer");
-  const winSound = new Audio('https://projectwarna.com/kuningtoto/win.mp3');
-
-  theWheel = new Winwheel({
-    canvasId: 'canvas',
-    numSegments: hadiahList.length,
-    segments: hadiahList.map(item => ({
-      fillStyle: item.color,
-      text: item.text
-    })),
-    animation: {
-      type: 'spinToStop',
-      duration: 6,
-      spins: 10,
-      easing: 'easeInOutCirc',
-      callbackSound: tickSound,
-      soundTrigger: 'segment',
-      callbackFinished: () => {
-        const hadiahIndex = hadiahIndexGlobal;
-        hadiahTerpilih = hadiahList[hadiahIndex]?.text || "Zonk"; // ⬅️ extra safe
-
-        const anglePerSegment = 360 / hadiahList.length;
-        const variation = (Math.random() - 0.5) * (anglePerSegment * 0.9);
-        theWheel.animation.stopAngle = (hadiahIndex * anglePerSegment) + (anglePerSegment / 2) + variation;
 
   const userId = document.getElementById("user-id")?.value.trim();
   const kode = document.getElementById("kupon")?.value.trim();
@@ -650,11 +592,6 @@ const fakeUserList = [
   // ...dan seterusnya
 ];
 
-function maskUser(userId) {
-  if (userId.length <= 4) return userId;
-  return userId.slice(0, 3) + "****" + userId.slice(-2);
-}
-
   function randomUserId() {
     const front = randomString(3);
     const back = randomString(2);
@@ -669,22 +606,19 @@ function maskUser(userId) {
   return result;
 }
 
-  function getMixedUser() {
-    return Math.random() < 0.7 ? fakeUserList[Math.floor(Math.random() * fakeUserList.length)] : randomUserId();
-  }
-
-  function pushFakeLiveFeed() {
-  const hadiah = hadiahList[Math.floor(Math.random() * hadiahList.length)].text;
-
-  // 70% ambil dari ID palsu, 30% dummy random
-  const isFromList = Math.random() < 0.7;
-  let user = isFromList
+function getMixedUser() {
+  return Math.random() < 0.7
     ? fakeUserList[Math.floor(Math.random() * fakeUserList.length)]
     : randomUserId();
+}
+
+function pushFakeLiveFeed() {
+  const hadiah = hadiahList[Math.floor(Math.random() * hadiahList.length)].text;
+  const user = getMixedUser(); // clean & rapi 😎
 
   const list = document.getElementById('live-list');
   const item = document.createElement('li');
-  item.textContent = `${maskUser(user)} baru saja mendapatkan ${hadiah}`; // 🔥 MASKING FIXED!
+  item.textContent = `${maskUser(user)} baru saja mendapatkan ${hadiah}`;
 
   const randomDelay = (Math.random() * 0.3 + 0.2).toFixed(2);
   item.style.opacity = 0;
@@ -721,6 +655,7 @@ function cekKupon() {
     document.getElementById("user-label").textContent = userId;
     document.getElementById("user-info").style.display = "block";
     document.getElementById("wheel-section").style.display = "flex";
+    document.getElementById("wheel-section").scrollIntoView({ behavior: 'smooth' });
   })
   .catch(() => {
     alert("⚠️ Gagal koneksi ke server.");
