update tester.html untuk visual preview spin wheel

--- a/public/tester.html
+++ b/public/tester.html
@@ -467,19 +467,17 @@ function spin() {
   spinBtn.style.opacity = 0.6;
 
   const sliceAngle = 360 / hadiahList.length;
-const index = getRandomHadiahIndexByWeight();
-const baseRotation = 360 * 10;
-const stopAngle = index * sliceAngle + sliceAngle / 2;
-const finalRotation = baseRotation + stopAngle;
+  const index = getRandomHadiahIndexByWeight(); // 🔥 ini penting!
+  const baseRotation = 360 * 10;
+  const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
+  const stopAngle = index * sliceAngle + sliceAngle / 2 + offset;
+  const finalRotation = baseRotation + stopAngle;
+const SPIN_DURATION = 6200; // sama kayak timeout result
 
+// Start muter animasi
 wheel.style.transition = `transform ${SPIN_DURATION}ms cubic-bezier(0.33, 1, 0.68, 1)`;
 wheel.style.transform = `rotate(${finalRotation}deg)`;
 
-setTimeout(() => {
-  const actualDeg = finalRotation % 360;
-  const landedIndex = Math.floor((actualDeg % 360) / sliceAngle);
-  hadiahTerpilih = hadiahList[landedIndex]?.text || "Zonk";
-  console.log({ actualDeg, landedIndex, hadiahTerpilih });
 tickSound.currentTime = 0;
 tickSound.play().catch(() => {}); // 🔥 cukup 1x aja
 
@@ -490,6 +488,13 @@ setTimeout(() => {
 
   alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
   pushLiveFeed(userId, hadiahTerpilih);
+
+  // Logging & tombol next
+  fetch("/api/log-spin", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
+  });
 
   spinBtn.textContent = hadiahTerpilih.toLowerCase().includes("zonk")
     ? "Coba Lagi 🔁"
@@ -506,36 +511,79 @@ setTimeout(() => {
 
   isSpinning = false;
 }, SPIN_DURATION);
-const SPIN_DURATION = 6200; // sama kayak timeout result
 
-  function cekKupon() {
-    spinBtn.disabled = false;
-    spinBtn.textContent = "Spin Sekarang!";
-    return;
+function initWheel() {
+  const canvasEl = document.getElementById("canvas");
+  const pointerEl = document.querySelector(".pointer");
+  const winSound = new Audio('https://projectwarna.com/kuningtoto/win.mp3');
 
-    fetch("/api/check-kupon", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ kode, user: userId })
-    })
-    .then(res => res.json())
-    .then(data => {
-      if (!data.success) {
-        alert("❌ " + (data.msg || data.error || "Kupon tidak valid."));
-        return;
-      }
+  theWheel = new Winwheel({
+    canvasId: 'canvas',
+    numSegments: hadiahList.length,
+    segments: hadiahList.map(item => ({
+      fillStyle: item.color,
+      text: item.text
+    })),
+    animation: {
+      type: 'spinToStop',
+      duration: 6,
+      spins: 10,
+      easing: 'easeInOutCirc',
+      callbackSound: tickSound,
+      soundTrigger: 'segment',
+      callbackFinished: () => {
+        const hadiahIndex = hadiahIndexGlobal;
+        hadiahTerpilih = hadiahList[hadiahIndex]?.text || "Zonk"; // ⬅️ extra safe
 
-      document.getElementById("user-label").textContent = userId;
-      document.getElementById("user-info").style.display = "block";
-      document.getElementById("wheel-section").style.display = "flex";
-      document.getElementById("wheel-section").scrollIntoView({ behavior: 'smooth' });
+        const anglePerSegment = 360 / hadiahList.length;
+        const variation = (Math.random() - 0.5) * (anglePerSegment * 0.9);
+        theWheel.animation.stopAngle = (hadiahIndex * anglePerSegment) + (anglePerSegment / 2) + variation;
+
+  const userId = document.getElementById("user-id")?.value.trim();
+  const kode = document.getElementById("kupon")?.value.trim();
+
+  fetch("/api/log-spin", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
+  })
+  .then(res => res.json())
+.then(data => {
+  console.log('Respon backend:', data);
+  if (!data.success) {
+  alert("❌ " + (data.msg || data.error || "Gagal menyimpan hasil."));
+  return;
+}
+
+      setTimeout(() => {
+  confetti({ particleCount: 180, spread: 90, origin: { y: 0.6 } });
+  new Audio('https://projectwarna.com/kuningtoto/win.mp3').play();
+  alert("🎉 Kamu mendapatkan: " + hadiahTerpilih);
+
+  const btn = document.querySelector('.spin-btn');
+
+  if (hadiahTerpilih.toLowerCase().includes("zonk")) {
+  btn.textContent = "Refresh Disini";
+  btn.onclick = () => location.reload(); // 🌀 RELOAD halaman
+  btn.classList.remove("success");
+  btn.classList.add("zonk-btn");
+  btn.style.opacity = "1";
+  btn.removeAttribute("disabled");
+} else {
+  btn.textContent = "Klaim Hadiah 🎁";
+  btn.onclick = () => window.location.href = "https://direct.lc.chat/14680344/";
+  btn.classList.add("success");
+  btn.removeAttribute("disabled");
+}
+}, 300);
     })
     .catch(() => {
       alert("⚠️ Gagal koneksi ke server.");
     });
-  }
+      }
+    }
+  });
 }
-
 
     function showSpark() {
       confetti({ particleCount: 150, spread: 70, origin: { y: 0.3 } });
@@ -571,6 +619,11 @@ const fakeUserList = [
   // ...dan seterusnya
 ];
 
+function maskUser(userId) {
+  if (userId.length <= 4) return userId;
+  return userId.slice(0, 3) + "****" + userId.slice(-2);
+}
+
   function randomUserId() {
     const front = randomString(3);
     const back = randomString(2);
@@ -585,19 +638,22 @@ const fakeUserList = [
   return result;
 }
 
-function getMixedUser() {
-  return Math.random() < 0.7
+  function getMixedUser() {
+    return Math.random() < 0.7 ? fakeUserList[Math.floor(Math.random() * fakeUserList.length)] : randomUserId();
+  }
+
+  function pushFakeLiveFeed() {
+  const hadiah = hadiahList[Math.floor(Math.random() * hadiahList.length)].text;
+
+  // 70% ambil dari ID palsu, 30% dummy random
+  const isFromList = Math.random() < 0.7;
+  let user = isFromList
     ? fakeUserList[Math.floor(Math.random() * fakeUserList.length)]
     : randomUserId();
-}
-
-function pushFakeLiveFeed() {
-  const hadiah = hadiahList[Math.floor(Math.random() * hadiahList.length)].text;
-  const user = getMixedUser(); // clean & rapi 😎
 
   const list = document.getElementById('live-list');
   const item = document.createElement('li');
-  item.textContent = `${maskUser(user)} baru saja mendapatkan ${hadiah}`;
+  item.textContent = `${maskUser(user)} baru saja mendapatkan ${hadiah}`; // 🔥 MASKING FIXED!
 
   const randomDelay = (Math.random() * 0.3 + 0.2).toFixed(2);
   item.style.opacity = 0;
@@ -615,12 +671,9 @@ function cekKupon() {
   const kode = document.getElementById("kupon").value.trim();
 
   if (!userId || !kode) {
-  alert("⚠️ Lengkapi ID dan kode kupon dulu!");
-  isSpinning = false;
-  spinBtn.disabled = false;
-  spinBtn.textContent = "Spin Sekarang!";
-  return;
-}
+    alert("⚠️ Lengkapi ID dan kode kupon dulu!");
+    return;
+  }
 
   fetch("/api/check-kupon", {
     method: "POST",
@@ -637,7 +690,6 @@ function cekKupon() {
     document.getElementById("user-label").textContent = userId;
     document.getElementById("user-info").style.display = "block";
     document.getElementById("wheel-section").style.display = "flex";
-    document.getElementById("wheel-section").scrollIntoView({ behavior: 'smooth' });
   })
   .catch(() => {
     alert("⚠️ Gagal koneksi ke server.");
