--- a/public/tester.html
+++ b/public/tester.html
@@ -439,7 +439,7 @@
     let isSpinning = false;
 let hadiahTerpilih = '';
 const wheel = document.getElementById('wheel');
-  const tickSound = new Audio('https://projectwarna.com/kuningtoto/tick.mp3');
+const tickSound = new Audio('https://projectwarna.com/kuningtoto/tick.mp3');
   tickSound.volume = 1;
   tickSound.preload = 'auto';
   tickSound.playbackRate = 1.2; // optional: lebih cepat
@@ -467,28 +467,35 @@ function spin() {
   spinBtn.style.opacity = 0.6;
 
   const sliceAngle = 360 / hadiahList.length;
-  const index = getRandomHadiahIndexByWeight(); // 🔥 ini penting!
+  const index = getRandomHadiahIndexByWeight(); 
   const baseRotation = 360 * 10;
   const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
+
+  const pointerOffset = 270; // posisi pointer di atas
   const stopAngle = index * sliceAngle + sliceAngle / 2 + offset;
-  const finalRotation = baseRotation + stopAngle;
+  const finalRotation = baseRotation + pointerOffset - stopAngle;
 
-  // Muter animasi
-  wheel.style.transition = 'transform 6s cubic-bezier(0.33, 1, 0.68, 1)';
-wheel.style.transform = `rotate(${finalRotation}deg)`;
 
-// 🔊 Tick sound selama spin
+  const SPIN_DURATION = 6200; // sama kayak timeout result
+
+  // Start muter animasi
+  wheel.style.transition = `transform ${SPIN_DURATION}ms cubic-bezier(0.33, 1, 0.68, 1)`;
+  wheel.style.transform = `rotate(${finalRotation}deg)`;
+
+// 🔊 Start tick
 const tickInterval = setInterval(() => {
   tickSound.currentTime = 0;
-  tickSound.play().catch((err) => {
-    console.warn("Tick sound blocked:", err);
-  });
+  tickSound.play().catch(() => {});
 }, 120);
 
-// Stop tick sound setelah 6 detik
+// ❌ Stop tick pas spin selesai
 setTimeout(() => {
   clearInterval(tickInterval);
-}, 6000);
+
+  // Lanjut logic hasil
+  hadiahTerpilih = hadiahList[index]?.text || "Zonk";
+  ...
+}, SPIN_DURATION);
 
   setTimeout(() => {
     hadiahTerpilih = hadiahList[index]?.text || "Zonk";
