--- a/public/tester.html
+++ b/public/tester.html
@@ -466,65 +466,53 @@ function spin() {
   spinBtn.textContent = "⏳ Memutar...";
   spinBtn.style.opacity = 0.6;
 
-  const sliceAngle = 360 / hadiahList.length;
-  const index = getRandomHadiahIndexByWeight(); 
-  const baseRotation = 360 * 10;
-  const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
+  const pointerOffset = 270;
+const sliceAngle = 360 / hadiahList.length;
+const index = getRandomHadiahIndexByWeight();
+const baseRotation = 360 * 10;
+const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
+const stopAngle = index * sliceAngle + sliceAngle / 2 + offset;
+const finalRotation = baseRotation + pointerOffset - stopAngle;
 
-  const pointerOffset = 270; // posisi pointer di atas
-  const stopAngle = index * sliceAngle + sliceAngle / 2 + offset;
-  const finalRotation = baseRotation + pointerOffset - stopAngle;
+const SPIN_DURATION = 6200;
 
+wheel.style.transition = `transform ${SPIN_DURATION}ms cubic-bezier(0.33, 1, 0.68, 1)`;
+wheel.style.transform = `rotate(${finalRotation}deg)`;
 
-  const SPIN_DURATION = 6200; // sama kayak timeout result
-
-  // Start muter animasi
-  wheel.style.transition = `transform ${SPIN_DURATION}ms cubic-bezier(0.33, 1, 0.68, 1)`;
-  wheel.style.transform = `rotate(${finalRotation}deg)`;
-
-// 🔊 Start tick
+// tick sound
 const tickInterval = setInterval(() => {
   tickSound.currentTime = 0;
   tickSound.play().catch(() => {});
 }, 120);
 
-// ❌ Stop tick pas spin selesai
 setTimeout(() => {
   clearInterval(tickInterval);
-
-  // Lanjut logic hasil
   hadiahTerpilih = hadiahList[index]?.text || "Zonk";
-  ...
+
+  alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
+  pushLiveFeed(userId, hadiahTerpilih);
+
+  fetch("/api/log-spin", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
+  });
+
+  spinBtn.textContent = hadiahTerpilih.toLowerCase().includes("zonk")
+    ? "Coba Lagi 🔁"
+    : "🎁 Klaim Hadiah";
+  spinBtn.disabled = false;
+  spinBtn.style.opacity = 1;
+  spinBtn.onclick = () => {
+    if (hadiahTerpilih.toLowerCase().includes("zonk")) {
+      location.reload();
+    } else {
+      window.location.href = "https://direct.lc.chat/14680344/";
+    }
+  };
+
+  isSpinning = false;
 }, SPIN_DURATION);
-
-  setTimeout(() => {
-    hadiahTerpilih = hadiahList[index]?.text || "Zonk";
-
-    alert(`🎉 Kamu mendapatkan: ${hadiahTerpilih}`);
-    pushLiveFeed(userId, hadiahTerpilih);
-
-    fetch("/api/log-spin", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ userId, hadiah: hadiahTerpilih, kode })
-    });
-
-    spinBtn.textContent = hadiahTerpilih.toLowerCase().includes("zonk")
-      ? "Coba Lagi 🔁"
-      : "🎁 Klaim Hadiah";
-    spinBtn.disabled = false;
-    spinBtn.style.opacity = 1;
-    spinBtn.onclick = () => {
-      if (hadiahTerpilih.toLowerCase().includes("zonk")) {
-        location.reload();
-      } else {
-        window.location.href = "https://direct.lc.chat/14680344/";
-      }
-    };
-
-    isSpinning = false;
-  }, 6200);
-}
 
 function initWheel() {
   const canvasEl = document.getElementById("canvas");
