--- a/public/tester.html
+++ b/public/tester.html
@@ -467,13 +467,14 @@ function spin() {
   spinBtn.style.opacity = 0.6;
 
   const pointerOffset = 270;
-const sliceAngle = 360 / hadiahList.length;
+  const sliceAngle = 360 / hadiahList.length;
 const index = getRandomHadiahIndexByWeight();
+const pointerOffset = 270; // karena pointer ada di atas (jam 12)
 const baseRotation = 360 * 10;
-const offset = (Math.random() - 0.5) * sliceAngle * 0.8;
+const offset = (Math.random() - 0.5) * sliceAngle * 0.8; // biar gak terlalu presisi
 const stopAngle = index * sliceAngle + sliceAngle / 2 + offset;
 const finalRotation = baseRotation + pointerOffset - stopAngle;
-
+console.log("Index hadiah:", index, "| Hadiah:", hadiahList[index].text);
 const SPIN_DURATION = 6200;
 
 wheel.style.transition = `transform ${SPIN_DURATION}ms cubic-bezier(0.33, 1, 0.68, 1)`;
